# clicker-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: build.yml
assets/: Info.plist
docs/: CNAME  index.html
src/: clicker.rs  config.rs  constants.rs  hotkey.rs  icons.rs  lib.rs  main.rs  timer.rs  ui.rs
