[package]
name = "clicker"
version = "0.0.1"
edition = "2021"
authors = ["Ilya (Marshal) <ilya@marshal.dev>"]
description = "Cross-platform autoclicker built with Rust - clicker.rs"
license = "MIT"

[lib]
name = "clicker"
path = "src/lib.rs"

[dependencies]
iced = { version = "0.13.1", features = ["debug"] }
enigo = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
global-hotkey = "0.7"
async-std = "1.13.2"
rand = "0.9.2"

[package.metadata.bundle]
name = "Clicker"
identifier = "rs.clicker.clicker"
version = "0.0.1"
resources = ["assets"]
copyright = "Copyright (c) 2025 Ilya"
category = "Utility"
short_description = "Cross-platform autoclicker built with Rust"
long_description = "A simple and efficient general-purpose autoclicker built with Rust for any game or application"
osx_minimum_system_version = "10.11"
