[package]
name = "clicker"
version = "0.0.2"
edition = "2021"
authors = ["Ilya (Marshal) <ilya@marshal.dev>"]
description = "Cross-platform autoclicker built with Rust - clicker.rs"
license = "MIT"

[lib]
name = "clicker"
path = "src/lib.rs"

[dependencies]
iced = { version = "0.13.1", features = ["debug"] }
enigo = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
global-hotkey = "0.7"
async-std = "1.13.2"
rand = "0.9.2"
crossbeam = "0.8.4"
webbrowser = "1.0"

[package.metadata.bundle]
name = "Clicker"
identifier = "rs.clicker.clicker"
copyright = "Copyright (c) 2025 Ilya"
category = "Utility"
osx_minimum_system_version = "10.11"

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = true
opt-level = 3
